--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "express": "~4.0.0",
+    "express": "^4.0.0",
     "static-favicon": "~1.0.0",
     "morgan": "~1.0.0",
     "cookie-parser": "~1.0.1",
     "body-parser": "~1.0.0",
-    "debug": "~0.7.4",
-    "ejs": "~0.8.5",
+    "debug": "^0.7.4",
+    "ejs": "^0.8.8",
     "express-session": "^1.0.3",
     "serve-static": "^1.1.0",
     "underscore": "^1.6.0",
